<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".ReceivePaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="35dp">

        <!--Offline/Online Mode-->
        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="30dp"-->
            <!--android:layout_gravity="right"-->
            <!--android:orientation="horizontal">-->
            <!--<Switch-->
                <!--android:id="@+id/swtInternetMode"-->
                <!--android:checked="true"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:text="@string/online"-->
                <!--android:textColor="@color/textDarkGrey"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="right"/>-->
            <!--&lt;!&ndash;<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="@color/textLightGrey"-->
                <!--android:text="@string/offline"-->
                <!--android:layout_marginLeft="10dp"/>&ndash;&gt;-->
        <!--</LinearLayout>-->

        <!--Receive Payment form-->
        <!--BVN Input-->
        <TextView
            style="@style/formLabel"
            android:text="@string/userid_phone" />
        <EditText
            android:id="@+id/edt_BVN_or_BVNPhoneNo"
            style="@style/inputText"
            android:hint="@string/phone_placeholder"
            android:inputType="number"
            android:layout_marginBottom="8dp"/>

        <TextView
            style="@style/formLabel"
            android:layout_gravity="top"
            android:text="@string/product_service"            />
        <EditText
            android:id="@+id/edt_product"
            style="@style/inputText"
            android:hint="@string/placeholder_product_service"
            android:inputType="text"
            android:layout_marginBottom="8dp"/>

        <!--Amount Input-->
        <TextView
            style="@style/formLabel"
            android:text="@string/amount" />
        <EditText
            android:id="@+id/edt_amount"
            style="@style/inputText"
            android:hint="@string/placeholder_amount"
            android:inputType="number"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="22dp"
                android:layout_height="18dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_credit_card_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/account"
                android:textColor="@color/textLightGrey"
                android:textSize="15sp"
                android:textAllCaps="true"
                android:layout_marginLeft="9dp"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>

        <!--Account Number-->
        <TextView
            style="@style/formLabel"
            android:text="@string/account_number" />

        <EditText
            android:id="@+id/edt_accountNumber"
            style="@style/inputText"
            android:hint="@string/placeholder_account_number"
            android:inputType="number"
            android:layout_marginBottom="8dp"/>

        <!--Bank-->
        <TextView
            style="@style/formLabel"
            android:text="@string/select_bank" />

        <Spinner
            style="@style/inputText"
            android:id="@+id/sp_BankSelect"
            android:layout_marginBottom="8dp"/>


        <!--Submit-->
        <Button
            android:id="@+id/btn_continuePayment"
            style="@style/submitButton"
            android:text="@string/continue_txt"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:drawableRight="@drawable/ic_arrow_alt_circle_right"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/rect"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>