<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <ImageView
        android:id="@+id/income_or_expenditure_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_arrow_back_green_24px"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/income_or_expenditure_icon"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lblService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/placeholder_product_service"/>
        <TextView
            android:id="@+id/lblTransactionCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_id"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lblAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:text="@string/amount_figures"/>
        <TextView
            android:id="@+id/lblDate"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/textLightGrey"
            android:layout_height="wrap_content"
            android:text="@string/yesterday"/>
    </LinearLayout>
</RelativeLayout>