<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccessReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            android:textColor="@color/successGreen"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="40sp"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:src="@drawable/ic_check_circle"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_id"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:textStyle="bold"
                android:text="@string/transaction_number"
                />
        </LinearLayout>

        <!--Back Home-->
        <Button
            style="@style/submitButton"
            android:text="@string/back_to_home"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_white_24px"
            android:drawablePadding="5dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:onClick="backHome"/>
    </LinearLayout>

</LinearLayout>